<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>p6spy</groupId>
    <artifactId>p6spy</artifactId>
    <name>P6Spy</name>
    <version>2.0-SNAPSHOT</version>
    <description>P6Spy is an open source framework for applications that intercept and optionally modify database statements.
    </description>
    <url>http://www.p6spy.com/</url>
    <developers>
        <developer>
            <id>aarvesen</id>
            <name>Alan Arvesen</name>
            <email>aarvesen@users.sourceforge.net</email>
        </developer>
        <developer>
            <id>bradleydot</id>
            <name>Bradley Johnson</name>
            <email>bradleydot@users.sourceforge.net</email>
        </developer>
        <developer>
            <id>cheechq</id>
            <name>Frank Quatro</name>
            <email>cheechq@users.sourceforge.net</email>
        </developer>
        <developer>
            <id>jeffgoke</id>
            <name>Jeff Goke</name>
            <email>jeffgoke@users.sourceforge.net</email>
        </developer>
        <developer>
            <id>Caleb Cranford</id>
            <name>thinknot</name>
            <email>thinknot@users.sourceforge.net</email>
        </developer>
        <developer>
            <id>Patrick Moore</id>
            <name>patmoore</name>
            <email>patmoore@users.sourceforge.net</email>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>The P6Spy Software License, Version 1.1</name>
            <url>http://p6spy.svn.sourceforge.net/viewvc/p6spy/trunk/src/main/site/license.txt?view=markup
            </url>
        </license>
    </licenses>
    <scm>
        <connection>scm:svn:p6spy.svn.sourceforge.net:/svnroot/p6spy
        </connection>
        <url>http://p6spy.svn.sourceforge.net/viewvc/p6spy/</url>
    </scm>
    <properties>
        <commons-logging-build>1.1</commons-logging-build>
        <log4j-build>1.2.14</log4j-build>
        <slf4j-build>1.5.6</slf4j-build>
        <json-lib-build>2.2.3</json-lib-build>
        <easymock-class-build>2.3</easymock-class-build>
        <easymock-build>2.3</easymock-build>
        <testng-build>5.5</testng-build>
        <commons-lang-build>2.4</commons-lang-build>
        <maven-antrun-plugin-build>1.2</maven-antrun-plugin-build>
        <maven-assembly-plugin-build>2.2-beta-3</maven-assembly-plugin-build>
        <maven-checkstyle-plugin-build>2.2</maven-checkstyle-plugin-build>
        <maven-clean-plugin-build>2.3</maven-clean-plugin-build>
        <maven-compiler-plugin-build>2.0.2</maven-compiler-plugin-build>
        <cobertura-maven-plugin-build>2.0</cobertura-maven-plugin-build>
        <maven-dependency-plugin-build>2.0</maven-dependency-plugin-build>
        <maven-deploy-plugin-build>2.4</maven-deploy-plugin-build>
        <maven-eclipse-plugin-build>2.5.1</maven-eclipse-plugin-build>
        <maven-javadoc-plugin-build>2.3</maven-javadoc-plugin-build>
        <maven-jar-plugin-build>2.2</maven-jar-plugin-build>
        <buildnumber-maven-plugin-build>1.0-beta-1</buildnumber-maven-plugin-build>
        <maven-project-info-reports-plugin-build>2.1</maven-project-info-reports-plugin-build>
        <maven-release-plugin-build>2.0-beta-8</maven-release-plugin-build>
        <maven-repository-plugin-build>2.1</maven-repository-plugin-build>
        <maven-resources-plugin-build>2.3</maven-resources-plugin-build>
        <maven-source-plugin-build>2.0.4</maven-source-plugin-build>
        <maven-site-plugin-build>2.0-beta-7</maven-site-plugin-build>
        <!--
            We need http://jira.codehaus.org/browse/SUREFIRE-446 and http://jira.codehaus.org/browse/SUREFIRE-463 to move to more
            recent versions (>2.4.2)
        -->
        <!-- maven-surefire-plugin-build>2.4.3</maven-surefire-plugin-build-->
        <maven-surefire-plugin-build>2.4-collab-amplafi-20070602</maven-surefire-plugin-build>
        <maven-war-plugin-build>2.1-alpha-2</maven-war-plugin-build>
        <commons-digester-build>1.8.1</commons-digester-build>
        <pmd-build>4.2.5</pmd-build>
    </properties>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.4.3</version>
                    <configuration>
                    <!-- 
                        <forkMode>pertest</forkMode>
                        <argLine>-XX:+HeapDumpOnOutOfMemoryError -enableassertions -Xmx256m
                            -XX:MaxPermSize=256m
                        </argLine>
                     -->
                        <!--
                            child first class loading like web apps do, seems like a good idea since this is a web app!
                        -->
                        <childDelegation>true</childDelegation>
                        <systemProperties>
                            <property>
                                <name>user.language</name>
                                <value>en_US</value>
                            </property>
                        </systemProperties>
                        <!--
                            <parallel>false</parallel> <threadCount>4</threadCount>
                        -->
                        <excludedGroups>browser</excludedGroups>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-idea-plugin</artifactId>
                    <version>2.0</version>
                    <configuration>
                        <downloadSources>true</downloadSources>
                        <downloadJavadocs>true</downloadJavadocs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin-build}</version>
                    <configuration>
                        <source>1.6</source>
                        <target>1.6</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven-dependency-plugin-build}</version>
                    <inherited>true</inherited>
                    <executions>
                        <execution>
                            <id>sources</id>
                            <phase>site</phase>
                            <goals>
                                <goal>sources</goal>
                            </goals>
                            <configuration>
                                <classifier>sources</classifier>
                                <classifier>javadoc</classifier>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-eclipse-plugin</artifactId>
                    <version>${maven-eclipse-plugin-build}</version>
                    <configuration>
                      <!-- 
                      <workspaceCodeStylesURL></workspaceCodeStylesURL>
                       -->
                        <buildOutputDirectory>bin</buildOutputDirectory>
                       
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <inherited>true</inherited>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>install</phase>
                            <goals>
                                <goal>jar</goal>
                                <goal>test-jar</goal>
                            </goals>
                            <configuration>
                                <attach>true</attach>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>${maven-deploy-plugin-build}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources-plugin-build}</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                    </configuration>                     
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${maven-clean-plugin-build}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${maven-release-plugin-build}</version>
                    <configuration>
                        <tagBase>${svn-base}/${artifactId}/tags/</tagBase>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-repository-plugin</artifactId>
                    <version>${maven-repository-plugin-build}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${maven-assembly-plugin-build}</version>
                    <!--
                        <inherited>true</inherited> <configuration> <descriptor>src/main/assembly/dep.xml</descriptor>
                        </configuration>
                    -->
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin-build}</version>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>jar</goal>
                                <goal>test-jar</goal>
                            </goals>
                            <configuration>
                                <attach>true</attach>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <inherited>true</inherited>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>${maven-site-plugin-build}</version>
                    <executions>
                       <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                            <configuration>
                                <siteDirectory>${pom.artifactId}/src/site</siteDirectory>
                                <attach>true</attach>
                            </configuration>
                        </execution>
                            <!-- 11 feb 2009: (PAT) Is this necessary?
                       <execution>
                            <phase>deploy</phase>
                            <goals>
                                <goal>attach-descriptor</goal>
                            </goals>
                            <configuration>
                                <attach>true</attach>
                            </configuration>
                        </execution>    
-->
                    </executions>      
                </plugin>

            </plugins>
        </pluginManagement>
    </build>
    <dependencies>
        <dependency>
            <groupId>regexp</groupId>
            <artifactId>regexp</artifactId>
            <version>1.3</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>gnu-regexp</groupId>
            <artifactId>gnu-regexp</artifactId>
            <version>1.1.4</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.14</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.apache.ant</groupId>
            <artifactId>ant</artifactId>
            <version>1.7.1</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.2</version>
            <optional>true</optional>
        </dependency>
        <!--
            <dependency> <groupId>oracle</groupId> <artifactId>classes12</artifactId> <version>9.2.0.5</version>
            <optional>true</optional> </dependency> <dependency> <groupId>jboss</groupId> <artifactId>jboss</artifactId>
            <version>2.4.6</version> <optional>true</optional> </dependency>
        -->
    </dependencies>
</project>